fix: dialog overflow

--- a/src/components/dialog/default.css
+++ b/src/components/dialog/default.css
@@ -11,6 +11,7 @@
   display: flex;
   position: fixed;
   inset: 0;
+  overflow: auto;
   overscroll-behavior: contain;
   -webkit-overflow-scrolling: touch;
 
